<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.live.LiveFragment">

<!--    <TextView-->
<!--        android:id="@+id/text_home"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
<!--    <ListView-->
<!--        android:id="@+id/live_list"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="0dp"-->
<!--        android:layout_marginTop="0dp"-->
<!--        android:layout_marginEnd="0dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <TextView
        android:id="@+id/tv_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_device"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_device_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="00:00:00:00:00"
        app:layout_constraintStart_toEndOf="@+id/tv_address_label"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:text="N/A"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_device_address"
        />

    <TextView
        android:id="@+id/tv_mode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_label"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="N/A"
        app:layout_constraintTop_toTopOf="@id/tv_mode_label"
        app:layout_constraintStart_toEndOf="@id/tv_mode_label"
        />
    <Button
        android:id="@+id/bt_change_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_mode"
        android:layout_marginEnd="10dp"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:textColor="#ffffff"
        android:background="@drawable/round_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_temp_label"
        />

    <TextView
        android:id="@+id/tv_temp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_mode_label"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="N/A"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_label"
        app:layout_constraintTop_toTopOf="@+id/tv_temp_label"
        />

    <Space
        android:id="@+id/space_after_temp"
        android:layout_width="100dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_label"
        app:layout_constraintTop_toTopOf="@id/tv_temp_label"
        />

    <TextView
        android:id="@+id/tv_freq_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freq"
        app:layout_constraintTop_toTopOf="@id/tv_temp_label"
        app:layout_constraintStart_toEndOf="@id/space_after_temp"
        />

    <TextView
        android:id="@+id/tv_freq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="N/A"
        app:layout_constraintTop_toTopOf="@id/tv_freq_label"
        app:layout_constraintStart_toEndOf="@id/tv_freq_label"
        />



    <com.ztfun.module.plot.ZtPlotView
        android:id="@+id/live_plot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>